--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <script src="http://masterendi.googlecode.com/files/salju.js"></script>
 <center>
 <br>
-<audio autoplay="autoplay" controls="controls" width="128px" height="30px style="display:none">
+	<div style="display:none">
+<audio autoplay="autoplay" controls="controls" width="128px" height="30px>
        <source src="https://siasy.uin-suska.ac.id/fst/assets/ec174891/listview/zain.mp3" type="audio/mpeg"></audio>
-   </center><br>
+													  </center><br></div>
 </head>
 <link rel="icon" type="image/png" href=https://i.ibb.co/2ZjtdBx/00a2d52dbc584c53b8bcf18ef5b41498.jpg""/>
 
