--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ tb5_randomizetitle();
          background-image: url(https://i.ibb.co/2ZjtdBx/00a2d52dbc584c53b8bcf18ef5b41498.jpg);
          background-repeat:no-repeat;
          background-attachment: fixed;
-         background-size: covered;
+         background-size: 1350;
 	 background-position: center;
          font-family	: Courier new;
          text-align	: center;
