--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@ tb5_randomizetitle();
          background-image: url(https://i.ibb.co/2ZjtdBx/00a2d52dbc584c53b8bcf18ef5b41498.jpg);
          background-repeat:no-repeat;
          background-attachment: fixed;
-         background-size: 1350;
-	 background-position: center;
+         background-size: covered;
          font-family	: Courier new;
          text-align	: center;
          color		: #fff;
